--- a/_posts/2021-05-03-vEGU21-is-over.html
+++ b/_posts/2021-05-03-vEGU21-is-over.html
@@ -5,9 +5,10 @@ permalink: /posts/2021/05/vEGU21-is-over/
 tags:
   - conference
   - outreach
+  - EGU
 ---
 
-<p><b>
+<p>
   The virtual EGU21 is over. Although the conference was virtual last year, too, I would consider this to be the first
   fully virtual EGU conference. Last year, EGU — really not bad at all — was more like an emergency replacement at the
   beginning of the COVID-19 pandemic. This year, there was plenty of time to prepare the conference in a virtual format
@@ -15,11 +16,11 @@ tags:
   very well in my opinion. There were many great short courses, general debates, and innumerable interesting
   contributions   from scientists all around the world. Now, it's time for a recap and to think about the impact of
   #vEGU21.
-</b></p>
+</p>
 
-<figure>
-  <img src='/images/vEGU21-networking.png' alt="Me doing some networking at #vEGU21 Exhibition" style="width:560px">
-  <figcaption>Me doing some networking at #vEGU21 Exhibition</figcaption>
+<figure style="display: inline-block">
+  <img src='/images/vEGU21-networking.png' alt="Me doing some networking at #vEGU21 Exhibition" style="width:560">
+  <figcaption style="text-align: center">Me doing some networking at #vEGU21 Exhibition</figcaption>
 </figure>
 
 <p>
@@ -33,7 +34,9 @@ tags:
   feasible in an offline conference.
 </p>
 
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/MPDJMMOVE8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/MPDJMMOVE8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 
 <p>
   Furthermore, it was the first time for me to create a scientific video. Until before the pandemic, I never thought
