--- a/_posts/2021-05-03-vEGU21-is-over.html
+++ b/_posts/2021-05-03-vEGU21-is-over.html
@@ -1,5 +1,5 @@
 ---
-title: '#vEGU21 is over - What remains?'
+title: '#vEGU21 is over – What remains?'
 date: 2021-05-03
 permalink: /posts/2021/05/vEGU21-is-over/
 tags:
@@ -18,7 +18,7 @@ tags:
   #vEGU21.
 </p>
 
-<figure style="display: inline-block">
+<figure>
   <img src='/images/vEGU21-networking.png' alt="Me doing some networking at #vEGU21 Exhibition" style="width:560">
   <figcaption style="text-align: center">Me doing some networking at #vEGU21 Exhibition</figcaption>
 </figure>
