Added teaser image to first blog post.

--- a/_posts/2021-05-03-vEGU21-is-over.html
+++ b/_posts/2021-05-03-vEGU21-is-over.html
@@ -1,6 +1,7 @@
 ---
 title: '#vEGU21 is over – What remains?'
 date: 2021-05-03
+teaser: vEGU21-networking.png
 permalink: /posts/2021/05/vEGU21-is-over/
 tags:
   - conference
