Improved first blog post.

--- a/_posts/2021-05-03-vEGU21-is-over.html
+++ b/_posts/2021-05-03-vEGU21-is-over.html
@@ -52,7 +52,8 @@ tags:
   Outreach is something that I was already interested in before, but I never really started to do it. A few months ago
   I wrote a popular scientific article on my PhD thesis that I submitted for a competition. And I will certainly write
   more about this competition as soon as it is finished. No matter what the result is. However this article was the
-  only outreach activity so far. I also got inspired by the interesting short courses on this topic during #vEGU21.
+  only outreach activity so far. I also got inspired by the interesting short courses on this topic during #vEGU21. So,
+  maybe I will create more videos for YouTube, but first of all I start with this blog.
 </p>
 
 <p>
