Corrected LinkedIn link profile and typo in blog post.

--- a/_posts/2021-05-03-vEGU21-is-over.html
+++ b/_posts/2021-05-03-vEGU21-is-over.html
@@ -53,7 +53,7 @@ tags:
   I wrote a popular scientific article on my PhD thesis that I submitted for a competition. And I will certainly write
   more about this competition as soon as it is finished. No matter what the result is. However this article was the
   only outreach activity so far. I also got inspired by the interesting short courses on this topic during #vEGU21. So,
-  maybe I will create more videos for YouTube, but first of all I start with this blog.
+  maybe I will create more videos for YouTube, but first of all, I start with this blog.
 </p>
 
 <p>
