Small fixes related to new blog post.

--- a/_posts/2022-04-21-Erdbebenwellen-malen-a-la-Courbet.html
+++ b/_posts/2022-04-21-Erdbebenwellen-malen-a-la-Courbet.html
@@ -46,11 +46,11 @@ Durch Simulationen ist es folglich möglich sich kilometergroße Regionen der Er
 </p>
 
 <figure>
-  <img src='Gustave_Courbet_-_Waves_-_Google_Art_Project.jpg' alt="Gustave Courbet - La vague (dt.: Die Welle)" style="width:560">
+  <img src="Courbet.jpg" alt="Gustave Courbet - La vague (dt.: Die Welle)" style="width:560">
   <figcaption style="text-align: center">Gustave Courbet – La vague (dt.: Die Welle) – ca. 1870 – Nationalmuseum für westliche Kunst, Tokio, Japan
-Quelle: https://commons.wikimedia.org/wiki/File:Gustave_Courbet_-Waves-_Google_Art_Project.jpg</figcaption>
+Quelle: <a href="https://commons.wikimedia.org/wiki/File:Gustave_Courbet_-Waves-_Google_Art_Project.jpg" target="_blank">Wikimedia Commons</a></figcaption>
 </figure>
 
 <p><b>
-This article was submitted to the Klaus-Tschira-Stiftung as an application for the KlarText award and published on the <a href="https://scilogs.spektrum.de/klartext/erdbebenwellen/">KlarText-Blog</a> on April 21st, 2022.
+This article was submitted to the Klaus-Tschira-Stiftung as an application for the KlarText award and published on the <a href="https://scilogs.spektrum.de/klartext/erdbebenwellen/" target="_blank">KlarText-Blog</a> on April 21st, 2022.
 </b></p>
