directly use Wikimedia image

--- a/_posts/2022-04-21-Erdbebenwellen-malen-a-la-Courbet.html
+++ b/_posts/2022-04-21-Erdbebenwellen-malen-a-la-Courbet.html
@@ -46,7 +46,7 @@ Durch Simulationen ist es folglich möglich sich kilometergroße Regionen der Er
 </p>
 
 <figure>
-  <img src="Courbet.png" alt="Gustave Courbet - La vague (dt.: Die Welle)" style="width:560">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/Gustave_Courbet_-_Waves_-_Google_Art_Project.jpg" alt="Gustave Courbet - La vague (dt.: Die Welle)" style="width:560">
   <figcaption style="text-align: center">Gustave Courbet – La vague (dt.: Die Welle) – ca. 1870 – Nationalmuseum für westliche Kunst, Tokio, Japan
 Quelle: <a href="https://commons.wikimedia.org/wiki/File:Gustave_Courbet_-_Waves_-_Google_Art_Project.jpg" target="_blank">Wikimedia Commons</a></figcaption>
 </figure>
